bindings/ios/PubkyApp.xcframework/ios-arm64/Headers/pubkyappFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    int32_t capacity;
    int32_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void ffi_pubkyapp_rust_future_free_u32(void* _Nonnull handle
);
uint32_t ffi_pubkyapp_rust_future_complete_u32(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_i32(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_i32(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_i32(void* _Nonnull handle
);
int32_t ffi_pubkyapp_rust_future_complete_i32(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_u64(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_u64(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_u64(void* _Nonnull handle
);
uint64_t ffi_pubkyapp_rust_future_complete_u64(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_i64(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_i64(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_i64(void* _Nonnull handle
);
int64_t ffi_pubkyapp_rust_future_complete_i64(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_f32(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_f32(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_f32(void* _Nonnull handle
);
float ffi_pubkyapp_rust_future_complete_f32(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_f64(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_f64(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_f64(void* _Nonnull handle
);
double ffi_pubkyapp_rust_future_complete_f64(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_pointer(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_pointer(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_pointer(void* _Nonnull handle
);
void*_Nonnull ffi_pubkyapp_rust_future_complete_pointer(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_rust_buffer(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_rust_buffer(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_rust_buffer(void* _Nonnull handle
);
RustBuffer ffi_pubkyapp_rust_future_complete_rust_buffer(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_void(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_void(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_void(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_complete_void(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_pubkyapp_checksum_func_auth(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_cleanup_file(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_cleanup_post(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_cleanup_user(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_create_bookmark(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_create_file(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_create_follow(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_create_post(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_create_recovery_file(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_create_tag(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_create_user(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_decrypt_recovery_file(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_delete_bookmark(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_delete_file(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_delete_follow(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_delete_tag(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_generate_secret_key(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_get(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_get_public_key_from_secret_key(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_list(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_parse_auth_url(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_publish(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_publish_https(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_put(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_remove_event_listener(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_reset_application_domain(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_resolve(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_resolve_https(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_session(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_set_application_domain(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_set_event_listener(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_sign_in(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_sign_out(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_sign_up(void
    
);
uint16_t uniffi_pubkyapp_checksum_func_switch_network(void
    
);
uint16_t uniffi_pubkyapp_checksum_method_eventlistener_on_event_occurred(void
    
);
uint32_t ffi_pubkyapp_uniffi_contract_version(void
    
);