bindings/python/pubkyapp/pubkyapp.py

_UniffiLib.ffi_pubkyapp_rust_future_free_u32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_u32.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_u32.restype = ctypes.c_uint32
_UniffiLib.ffi_pubkyapp_rust_future_poll_i32.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_i32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_i32.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_i32.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_i32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_i32.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_pubkyapp_rust_future_poll_u64.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_u64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_u64.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_u64.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_u64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_u64.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_pubkyapp_rust_future_poll_i64.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_i64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_i64.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_i64.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_i64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_i64.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_pubkyapp_rust_future_poll_f32.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_f32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_f32.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_f32.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_f32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_f32.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_pubkyapp_rust_future_poll_f64.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_f64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_f64.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_f64.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_f64.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_f64.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_pubkyapp_rust_future_poll_pointer.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_pointer.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_pointer.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_pointer.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_pointer.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_pubkyapp_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_pubkyapp_rust_future_poll_void.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_void.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_void.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_void.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_void.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_void.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_void.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_void.restype = None
_UniffiLib.uniffi_pubkyapp_checksum_func_auth.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_auth.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_cleanup_file.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_cleanup_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_cleanup_post.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_cleanup_post.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_cleanup_user.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_cleanup_user.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_create_bookmark.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_create_bookmark.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_create_file.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_create_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_create_follow.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_create_follow.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_create_post.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_create_post.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_create_recovery_file.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_create_recovery_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_create_tag.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_create_tag.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_create_user.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_create_user.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_decrypt_recovery_file.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_decrypt_recovery_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_delete_bookmark.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_delete_bookmark.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_delete_file.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_delete_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_delete_follow.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_delete_follow.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_delete_tag.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_delete_tag.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_generate_secret_key.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_generate_secret_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_get.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_get_public_key_from_secret_key.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_get_public_key_from_secret_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_list.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_list.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_parse_auth_url.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_parse_auth_url.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_publish.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_publish.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_publish_https.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_publish_https.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_put.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_put.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_remove_event_listener.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_remove_event_listener.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_reset_application_domain.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_reset_application_domain.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_resolve.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_resolve.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_resolve_https.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_resolve_https.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_session.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_session.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_set_application_domain.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_set_application_domain.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_set_event_listener.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_set_event_listener.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_sign_in.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_sign_in.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_sign_out.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_sign_out.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_sign_up.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_sign_up.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_func_switch_network.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_func_switch_network.restype = ctypes.c_uint16
_UniffiLib.uniffi_pubkyapp_checksum_method_eventlistener_on_event_occurred.argtypes = (
)
_UniffiLib.uniffi_pubkyapp_checksum_method_eventlistener_on_event_occurred.restype = ctypes.c_uint16
_UniffiLib.ffi_pubkyapp_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_pubkyapp_uniffi_contract_version.restype = ctypes.c_uint32
_uniffi_check_contract_api_version(_UniffiLib)
_uniffi_check_api_checksums(_UniffiLib)

# Async support

# Public interface members begin here.


class _UniffiConverterInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "i64"
    VALUE_MIN = -2**63
    VALUE_MAX = 2**63

    @staticmethod
    def read(buf):
        return buf.read_i64()

    @staticmethod
    def write_unchecked(value, buf):
        buf.write_i64(value)

class _UniffiConverterBool(_UniffiConverterPrimitive):
    @classmethod
    def check(cls, value):
        return not not value

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.read_u8())

    @classmethod
    def write_unchecked(cls, value, buf):
        buf.write_u8(value)

    @staticmethod
    def lift(value):
        return value != 0
